@@ -153,11 +153,11 @@ e1fca774a067de5edb7eb1165619573993d2a5e5647c05568a68f3a53a7990cd  test/results/t
 60206125928d77a758cd73ec8e85f8592423ce678570ebbe7876b71dc38aaeaf  test/results/test26-amd64-binary
 649349e01a90ce93ba72ba1b9bb81a9bd9d79b580ddff366173c98835c10b976  test/results/test26-armv7l-binary
 576511f1f6699e7798bcab2f36bf8eb86825fd13748770b17f46c3a691200b01  test/results/test26-x86-binary
-12de91f702b0ced71801c1662dc0a3e253158238e1d1a0b9bc54015a24fd77cc  test/results/test27-aarch64-binary
-1250294c2fddcdd37072fef4c753de3bd5b1a5f754d75448044211116be08bd9  test/results/test27-amd64-binary
-669af3d269283cb44ae6f29ff7f0522e615380befe0a5a5e0fe731f122236f0a  test/results/test27-armv7l-binary
+32afdc9cb944b6f1db101050dd45947bdffac5ca92eb0407169e6466f878433d  test/results/test27-aarch64-binary
+e265ee574e7277f81dbecde7d0941f18704379898299c47b24e55cd6ca1b362a  test/results/test27-amd64-binary
+4d7a84b6f861807c629bf26bba759ce45c5f3f093b28bcd050dd93f449e2bf47  test/results/test27-armv7l-binary
 d83e0aae5b335f34a528bbb6c213bbef9d993abae335e0f909183bc6debfd37b  test/results/test27-knight-posix-binary
-cc21839d9b89016cb9ccc059dfbe19c2490c2527975401812d950bf12f716c85  test/results/test27-x86-binary
+9d0ea091b1ac5fa5a9882ce93c816f2047a6751dc6edb7fef808a545ce3261f2  test/results/test27-x86-binary
 fd72ce6ebbf8263ef9fdff9ca7d789a55ba399ab222c2f5f93b138c61830376d  test/results/test99-aarch64-binary
 717c42e1a1a91ef5b67ce298bc92a148418a5dec6761a358a52b22a01f16c928  test/results/test99-amd64-binary
 4e759b212b087824f7b0f14c5147272c9984c4a4d00074b2fd771c3d004c9aec  test/results/test99-armv7l-binary
