@@ -18,35 +18,47 @@
 set -x
 # Build the test
 bin/M2-Planet --architecture amd64 \
-    -f test/common_amd64/functions/chdir.c \
-    -f test/common_amd64/functions/malloc.c \
-    -f test/common_amd64/functions/getcwd.c \
-    -f test/common_amd64/functions/exit.c \
-    -f test/common_amd64/functions/file.c \
-    -f functions/calloc.c \
-    -f functions/string.c \
-    -f functions/match.c \
-    -f functions/file_print.c \
-    -f test/test27/chdir.c \
+	-f test/common_amd64/functions/chdir.c \
+	-f test/common_amd64/functions/malloc.c \
+	-f test/common_amd64/functions/getcwd.c \
+	-f test/common_amd64/functions/exit.c \
+	-f test/common_amd64/functions/file.c \
+	-f functions/calloc.c \
+	-f functions/string.c \
+	-f functions/match.c \
+	-f functions/file_print.c \
+	-f test/test27/chdir.c \
+	--debug \
 	-o test/test27/chdir.M1 || exit 1
+
+# Build debug footer
+blood-elf --64 -f test/test27/chdir.M1 \
+	-o test/test27/chdir-footer.M1 || exit 2
 
 # Macro assemble with libc written in M1-Macro
 M1 -f test/common_amd64/amd64_defs.M1 \
 	-f test/common_amd64/libc-core.M1 \
 	-f test/test27/chdir.M1 \
+	-f test/test27/chdir-footer.M1 \
 	--LittleEndian \
 	--architecture amd64 \
-	-o test/test27/chdir.hex2 || exit 2
+	-o test/test27/chdir.hex2 || exit 3
 
 # Resolve all linkages
-hex2 -f test/common_amd64/ELF-amd64.hex2 -f test/test27/chdir.hex2 --LittleEndian --architecture amd64 --BaseAddress 0x00600000 -o test/results/test27-amd64-binary --exec_enable || exit 3
+hex2 -f test/common_amd64/ELF-amd64-debug.hex2 \
+	-f test/test27/chdir.hex2 \
+	--LittleEndian \
+	--architecture amd64 \
+	--BaseAddress 0x00600000 \
+	-o test/results/test27-amd64-binary \
+	--exec_enable || exit 4
 
 # Ensure binary works if host machine supports test
 if [ "$(get_machine ${GET_MACHINE_FLAGS})" = "amd64" ]
 then
-    . ./sha256.sh
-    # Verify that the resulting file works
-    ./test/results/test27-amd64-binary
-	[ 0 = $? ] || exit 4
+	. ./sha256.sh
+	# Verify that the resulting file works
+	./test/results/test27-amd64-binary
+	[ 0 = $? ] || exit 5
 fi
 exit 0
