@@ -18,16 +18,17 @@
 set -x
 # Build the test
 bin/M2-Planet --architecture knight-posix \
-    -f test/common_knight/functions/chdir.c \
-    -f test/common_knight/functions/malloc.c \
-    -f test/common_knight/functions/getcwd.c \
-    -f test/common_knight/functions/exit.c \
-    -f test/common_knight/functions/file.c \
-    -f functions/calloc.c \
-    -f functions/string.c \
-    -f functions/match.c \
-    -f functions/file_print.c \
-    -f test/test27/chdir.c \
+	-f test/common_knight/functions/chdir.c \
+	-f test/common_knight/functions/malloc.c \
+	-f test/common_knight/functions/getcwd.c \
+	-f test/common_knight/functions/exit.c \
+	-f test/common_knight/functions/file.c \
+	-f functions/calloc.c \
+	-f functions/string.c \
+	-f functions/match.c \
+	-f functions/file_print.c \
+	-f test/test27/chdir.c \
+	--debug \
 	-o test/test27/chdir.M1 || exit 1
 
 # Macro assemble with libc written in M1-Macro
@@ -36,17 +37,23 @@ M1 -f test/common_knight/knight_defs.M1 \
 	-f test/test27/chdir.M1 \
 	--BigEndian \
 	--architecture knight-posix \
-	-o test/test27/chdir.hex2 || exit 2
+	-o test/test27/chdir.hex2 || exit 3
 
 # Resolve all linkages
-hex2 -f test/test27/chdir.hex2 --BigEndian --architecture knight-posix --BaseAddress 0x0 -o test/results/test27-knight-posix-binary --exec_enable || exit 3
+hex2 -f test/common_knight/ELF-knight.hex2 \
+	-f test/test27/chdir.hex2 \
+	--BigEndian \
+	--architecture knight-posix \
+	--BaseAddress 0x0 \
+	-o test/results/test27-knight-posix-binary \
+	--exec_enable || exit 4
 
 # Ensure binary works if host machine supports test
 if [ "$(get_machine ${GET_MACHINE_FLAGS})" = "knight*" ]
 then
-    . ./sha256.sh
-    # Verify that the resulting file works
-    ./test/results/test27-knight-posix-binary
-	[ 0 = $? ] || exit 4
+	. ./sha256.sh
+	# Verify that the resulting file works
+	./test/results/test27-knight-posix-binary
+	[ 0 = $? ] || exit 5
 fi
 exit 0
