@@ -18,37 +18,49 @@
 set -x
 # Build the test
 bin/M2-Planet --architecture x86 \
-    -f test/common_x86/functions/chdir.c \
-    -f test/common_x86/functions/malloc.c \
-    -f test/common_x86/functions/getcwd.c \
-    -f test/common_x86/functions/fork.c \
-    -f test/common_x86/functions/execve.c \
-    -f test/common_x86/functions/exit.c \
-    -f test/common_x86/functions/file.c \
-    -f functions/calloc.c \
-    -f functions/string.c \
-    -f functions/match.c \
-    -f functions/file_print.c \
-    -f test/test27/chdir.c \
+	-f test/common_x86/functions/chdir.c \
+	-f test/common_x86/functions/malloc.c \
+	-f test/common_x86/functions/getcwd.c \
+	-f test/common_x86/functions/fork.c \
+	-f test/common_x86/functions/execve.c \
+	-f test/common_x86/functions/exit.c \
+	-f test/common_x86/functions/file.c \
+	-f functions/calloc.c \
+	-f functions/string.c \
+	-f functions/match.c \
+	-f functions/file_print.c \
+	-f test/test27/chdir.c \
+	--debug \
 	-o test/test27/chdir.M1 || exit 1
+
+# Build debug footer
+blood-elf -f test/test27/chdir.M1 \
+	-o test/test27/chdir-footer.M1 || exit 2
 
 # Macro assemble with libc written in M1-Macro
 M1 -f test/common_x86/x86_defs.M1 \
 	-f test/common_x86/libc-core.M1 \
 	-f test/test27/chdir.M1 \
+	-f test/test27/chdir-footer.M1 \
 	--LittleEndian \
 	--architecture x86 \
-	-o test/test27/chdir.hex2 || exit 2
+	-o test/test27/chdir.hex2 || exit 3
 
 # Resolve all linkages
-hex2 -f test/common_x86/ELF-i386.hex2 -f test/test27/chdir.hex2 --LittleEndian --architecture x86 --BaseAddress 0x8048000 -o test/results/test27-x86-binary --exec_enable || exit 3
+hex2 -f test/common_x86/ELF-i386-debug.hex2 \
+	-f test/test27/chdir.hex2 \
+	--LittleEndian \
+	--architecture x86 \
+	--BaseAddress 0x8048000 \
+	-o test/results/test27-x86-binary \
+	--exec_enable || exit 4
 
 # Ensure binary works if host machine supports test
 if [ "$(get_machine ${GET_MACHINE_FLAGS})" = "x86" ]
 then
-    . ./sha256.sh
-    # Verify that the resulting file works
-    ./test/results/test27-x86-binary
-	[ 0 = $? ] || exit 4
+	. ./sha256.sh
+	# Verify that the resulting file works
+	./test/results/test27-x86-binary
+	[ 0 = $? ] || exit 5
 fi
 exit 0
