@@ -16,6 +16,7 @@
 
 * Current
 ** Added
+Added test for chdir and getcwd family of posix primitives
 
 ** Changed
 
